--- a/views/main.html
+++ b/views/main.html
@@ -14,10 +14,10 @@
 		<div class="col-md-12">
 		<div id="slidy-container">
   <figure id="slidy">
-    <img src="images/1.jpg" alt="eyes" >
-    <img src="images/2.jpg" alt="lou" >
-    <img src="images/3.jpg" alt="lucie-2" >
-    <img src="images/4.jpg" alt="lucie" >
+    <img src="images/4.jpg" alt="Joey Stab Ball Pushup" >
+    <img src="images/cravings.jpg" alt="Cravings" >
+    <img src="images/StoppedWorkingOut.jpg" alt="What happens when stop working out" >
+    <img src="images/JH-NASMCert.jpg" alt="Certificate" >
   </figure>
 </div>
 </div>
