--- a/views/contact.html
+++ b/views/contact.html
@@ -1,28 +1,41 @@
 <div data-ng-init="setup()">
-test
-</div>test
+	<div class="row">
+		<div class="col-md-6">
+		  <h2>Fitness Phoenix</h2>
+		</div>
+		<div class="col-md-6">
+		  <h4>Rising out from the fire to the new you</h4>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+		  <h3>Contact me</h3>
+		</div>
+	</div>	
+	<div class="row">
+		<div class="col-md-12">
+			<p>Joey Hedges, NASM CPT - can be reached...</p>
+		  <p> via Call or Text 770-598-8666
+			<a href="tel:770-598-8666" class="btn btn-info btn-lg">
+			  <span class="glyphicon glyphicon-phone"></span> Call me 
+			</a>
+		  </p> 
 
-<p>This is the about view.</p>
 
-Fitness Phoenix - Rising out of the ashes to the new you!  
-
-
-
-Joey Hedges, CPT
-Can be reached at 
-
-Via Call or Text
-Cell - 770-598-8666
-
-
-Via email
-joeyhedgesfitnessphoenix@gmail.com
+		  <p> via email @ joeyhedgesfitnessphoenix@gmail
+			<a href="mailto:joeyhedgesfitnessphoenix@gmail.com" class="btn btn-info btn-lg">
+			  <span class="glyphicon glyphicon-envelope"></span> Email me 
+			</a>
+		  </p> 
+		</div>
+	</div>	
+</div>
 
 
 
-<!-- add glyhphicons and mailtos link to phone if possible for mobile viewing and voip -->
 
 
-<a href="tel:770-598-8666">7705988666</a>
 
-<a href="mailto:joeyhedgesfitnessphoenix@gmail.com">Email me</a>
+
+
+
