--- a/views/testimonials.html
+++ b/views/testimonials.html
@@ -1,18 +1,32 @@
 <div data-ng-init="setup()">
-test
-</div>test
+	<div class="row">
+		<div class="col-md-6">
+		  <h2>Fitness Phoenix</h2>
+		</div>
+		<div class="col-md-6">
+		  <h4>Rising out from the fire to the new you</h4>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+		  <h3>Triumphant Testimonials</h3>
+		</div>
+	</div>	
+	<div class="row">
+		<div class="col-md-12">
+			<p>As I am new and just starting out...I am the only testimonial.  And that sure does not count.  
 
-<p>This is the about view.</p>
-
-Fitness Phoenix - Rising out of the ashes to the new you!  
+				Would you like to be the first Triumphant Testimonial.  Ask me how.  
 
 
-As I am new and just starting out...I am the only testimonial.  And that sure does not count.  
+				Triumphant Testimonials awards - T-Shirt, Bottle, ????</p>
+		</div>
+	</div>	
+</div>
 
-Would you like to be the first Triumphant Testimonial.  Ask me how.  
 
 
-Triumphant Testimonials awards - T-Shirt, Bottle, ????
+
 
 
 
