--- a/views/services.html
+++ b/views/services.html
@@ -1,11 +1,57 @@
 <div data-ng-init="setup()">
-test
-</div>test
-
-
-1 o 1
-Group Classes - Fun Camp
-Design a plan
-"The more you work the more you save"
-Friends and Family
-Referral
+	<div class="row">
+		<div class="col-md-6">
+		  <h2>Fitness Phoenix</h2>
+		</div>
+		<div class="col-md-6">
+		  <h4>Rising out from the fire to the new you</h4>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+		  <h3>Current service menu and charges</h3>
+		</div>
+	</div>	
+	<div class="row">
+		<div class="col-md-12">
+		  <table>
+				<tr>
+					<th>Session Type</th>
+					<th>Description</th>
+					<th>Price</th>
+				</tr>
+				<tr>
+					<td>Group Class - Un-boot Camp</td>
+					<td>Exercise should be fun and not militant so I do not want to run a boot camp.  3-4 sessions scheduled per week in group setting.</td>
+					<td>$50 / month</td>
+				</tr>
+				<tr>
+					<td>1o1 - One on One Specified Personal Training</td>
+					<td>Progam designed specifically for you.  2-3 sessions per week</td>
+					<td>Costs varies.   Please contact for details and availability.  Average ~ $30 / hour</td>
+				</tr>
+				<tr>
+					<td>Design a Program</td>
+					<td>Need a program but don't want or need the coaching and cueing nor want to be in a group environment?</td>
+					<td>Starting at $50.  Cost may vary based on request.  Cost includes assessments./td>
+				</tr>				
+				<tr>
+					<td>Group Discounts</td>
+					<td>The more you work the more you save</td>
+					<td>Discounts on next month's group rate based on session attendance</td>
+				</tr>
+				<tr>
+					<td>Global Discounts</td>
+					<td>Referral program</td>
+					<td>Discounts on next month's rate per referral</td>
+				</tr>		
+				<tr>
+					<td>Competitor rates better?</td>
+					<td>Show me a better rate from a local similar trainer</td>
+					<td>Reduction of costs site wide for all current members to beat advertised pricing.</td>
+				</tr>					
+		  </table>
+		</div>
+	</div>	
+	
+</div>
