--- a/views/videos.html
+++ b/views/videos.html
@@ -1,14 +1,22 @@
 <div data-ng-init="setup()">
-test
-</div>test
-
-<p>This is the videos view.</p>
-
-Fitness Phoenix - Rising out of the ashes to the new you!  
-
-
-
-
-
-5 minute extras
-Tips
+	<div class="row">
+		<div class="col-md-6">
+		  <h2>Fitness Phoenix</h2>
+		</div>
+		<div class="col-md-6">
+		  <h4>Rising out from the fire to the new you</h4>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+		  <h3>Videos</h3>
+		</div>
+	</div>	
+	<div class="row">
+		<div class="col-md-12">
+<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1643749675864928%2F&show_text=0&width=560" width="560" height="420" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+		
+		
+		</div>
+	</div>	
+</div>
