--- a/views/contact.html
+++ b/views/contact.html
@@ -15,18 +15,12 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p>Joey Hedges, NASM CPT - can be reached...</p>
-		  <p> via Call or Text 770-598-8666
 			<a href="tel:770-598-8666" class="btn btn-info btn-lg">
-			  <span class="glyphicon glyphicon-phone"></span> Call me 
-			</a>
-		  </p> 
-
-
-		  <p> via email @ joeyhedgesfitnessphoenix@gmail
+				  <span class="glyphicon glyphicon-phone"></span>Call me </a>
+			<p> via Call or Text 770-598-8666</p> 
 			<a href="mailto:joeyhedgesfitnessphoenix@gmail.com" class="btn btn-info btn-lg">
-			  <span class="glyphicon glyphicon-envelope"></span> Email me 
-			</a>
-		  </p> 
+			  <span class="glyphicon glyphicon-envelope"></span>Email me </a>
+			<p> via email @ joeyhedgesfitnessphoenix@gmail</p> 
 		</div>
 	</div>	
 </div>
