--- a/views/videos.html
+++ b/views/videos.html
@@ -13,10 +13,31 @@
 		</div>
 	</div>	
 	<div class="row">
-		<div class="col-md-12">
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjoeyhedgesfitness%2Fvideos%2F1643749675864928%2F&show_text=0&width=560" width="560" height="420" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+		<div class="col-md-6">
 		
+			
+			
+			
+			
+			<video controls poster="/images/6n6-CurlLegBum.gif">
+			  <source src="/videos/6in6CurlsLegsBum.mp4" type="video/mp4" alt="6 in 6: Curls for the Girls and Legs and Bums for the Chums">
+				These videos are only available in MP4 format.
+			</video>
+			
+			
+		</div>
+		<div class="col-md-6">
 		
+			
+			
+			
+			
+			<video controls poster="/images/6n6-CurlLegBum.gif">
+			  <source src="/videos/6in6CurlsLegsBum.mp4" type="video/mp4" alt="6 in 6: Curls for the Girls and Legs and Bums for the Chums">
+				These videos are only available in MP4 format.
+			</video>
+			
+			
 		</div>
 	</div>	
 </div>
