--- a/styles/main.css
+++ b/styles/main.css
@@ -158,12 +158,6 @@ article {
 }
 
 
-
-
-
-
-
-
 * {
   box-sizing: border-box;
 }
@@ -268,4 +262,22 @@ body {
 
 .nobullet {
   list-style-type: none;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2}
+tr:hover {background-color: #f5f5f5}
+
+table {
+    width: 100%;
+}
+
+
+th, td {
+    padding: 15px;
+    text-align: left;
+}
+
+th {
+    text-align: center;
+	    height: 50px;
 }
