--- a/views/services.html
+++ b/views/services.html
@@ -13,7 +13,7 @@
 		</div>
 	</div>	
 	<div class="row">
-		<div class="col-md-12">
+		<div  style="overflow-x:auto;" class="col-md-12">
 		  <table>
 				<tr>
 					<th>Session Type</th>
@@ -21,12 +21,12 @@
 					<th>Price</th>
 				</tr>
 				<tr>
-					<td>Group Class - Un-boot Camp</td>
+					<td>Group Class </br> Un-boot Camp</td>
 					<td>Exercise should be fun and not militant so I do not want to run a boot camp.  3-4 sessions scheduled per week in group setting.</td>
 					<td>$50 / month</td>
 				</tr>
 				<tr>
-					<td>1o1 - One on One Specified Personal Training</td>
+					<td>1o1 </br> One on One Specified Personal Training</td>
 					<td>Progam designed specifically for you.  2-3 sessions per week</td>
 					<td>Costs varies.   Please contact for details and availability.  Average ~ $30 / hour</td>
 				</tr>
