--- a/views/contact.html
+++ b/views/contact.html
@@ -15,8 +15,12 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p>Joey Hedges, NASM CPT - can be reached...</p>
-			<a href="tel:770-598-8666" class="btn btn-info btn-lg">
+			<a href="tel:7705988666" class="btn btn-info btn-lg">
 				  <span class="glyphicon glyphicon-phone"></span>Call me </a>
+				  
+			<a href="sms:7705988666" class="btn btn-info btn-lg">
+				  <span class="glyphicon glyphicon-phone"></span>Text me </a>	
+		
 			<p> via Call or Text 770-598-8666</p> 
 			<a href="mailto:joeyhedgesfitnessphoenix@gmail.com" class="btn btn-info btn-lg">
 			  <span class="glyphicon glyphicon-envelope"></span>Email me </a>
