--- a/views/videos.html
+++ b/views/videos.html
@@ -12,11 +12,20 @@
 		  <h3>Videos</h3>
 		</div>
 	</div>	
+	
+		<div class="row">
+		<div class="col-md-12">
+			<h5>New Videos</h5>
+			<p>New videos coming soon.</p>
+		</div>
+	</div>
+	
 	<div class="row">
 		<div class="col-md-12">
-		
-			<video controls poster="/images/6n6-CurlLegBum.gif">
-			  <source src="/videos/6in6CurlsLegsBum.mp4" type="video/mp4" alt="6 in 6: Curls for the Girls and Legs and Bums for the Chums">
+			<h5>Video Archive</h5>
+			<h5>6n6 - Ryhme Time Workouts</h5>
+			<video controls poster="/videos/6n6JabsNAbsgif">
+			  <source src="/videos/6n6-JabsNAbs.mp4" type="video/mp4" alt="6 in 6: Jabs and Abs">
 				These videos are only available in MP4 format.
 			</video>
 			
@@ -25,8 +34,109 @@
 	<div class="row">
 		<div class="col-md-12">
 
-			<video controls poster="/images/6n6-CurlLegBum.gif">
+			<video controls poster="/videos/6n6ButtNGut.gif">
+			  <source src="/videos/6n6-ButtNGut.mp4" type="video/mp4" alt="6 in 6: Butt and Gut">
+				These videos are only available in MP4 format.
+			</video>
+		</div>
+	</div>	
+	
+	<div class="row">
+		<div class="col-md-12">
+
+			<video controls poster="/videos/6n6CurlLegBum.gif">
 			  <source src="/videos/6in6CurlsLegsBum.mp4" type="video/mp4" alt="6 in 6: Curls for the Girls and Legs and Bums for the Chums">
+				These videos are only available in MP4 format.
+			</video>
+		</div>
+	</div>	
+	
+	<div class="row">
+		<div class="col-md-12">
+
+			<video controls poster="/videos/6n6BunsGuns.gif">
+			  <source src="/videos/6n6BunsGuns.mp4" type="video/mp4" alt="6 in 6: Buns and Guns">
+				These videos are only available in MP4 format.
+			</video>
+		</div>
+	</div>	
+	
+	<div class="row">
+		<div class="col-md-12">
+
+			<video controls poster="/videos/6n6ThighsNTris.gif">
+			  <source src="/videos/6in6CurlsLegsBum.mp4" type="video/mp4" alt="6 in 6: Thighs and Tris">
+				These videos are only available in MP4 format.
+			</video>
+		</div>
+	</div>	
+	
+	<div class="row">
+		<div class="col-md-12">
+
+			<video controls poster="/videos/6n6ThrowsNRows.gif">
+			  <source src="/videos/6n6ThrowsNRows.mp4" type="video/mp4" alt="6 in 6: Throws and Rows">
+				These videos are only available in MP4 format.
+			</video>
+		</div>
+	</div>	
+	
+	<div class="row">
+		<div class="col-md-12">
+			<h5>Video Archive</h5>
+			<p>6n6 - Total Body</p>
+			<video controls poster="/videos/6n6Full1.gif">
+			  <source src="/videos/6n6Full1.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 1">
+				These videos are only available in MP4 format.
+			</video>
+			
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+
+			<video controls poster="/videos/6n6Full2.gif">
+			  <source src="/videos/6n6Full2.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 2">
+				These videos are only available in MP4 format.
+			</video>
+		</div>
+	</div>	
+	
+	<div class="row">
+		<div class="col-md-12">
+
+			<video controls poster="/videos/6n6Full3.gif">
+			  <source src="/videos/6n6Full3.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 3">
+				These videos are only available in MP4 format.
+			</video>
+		</div>
+	</div>	
+	
+	<div class="row">
+		<div class="col-md-12">
+
+			<video controls poster="/videos/6n6Full4.gif">
+			  <source src="/videos/6n6Full14.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 4">
+				These videos are only available in MP4 format.
+			</video>
+		</div>
+	</div>	
+	
+	<div class="row">
+		<div class="col-md-12">
+
+			<video controls poster="/videos/6n6Full5.gif">
+			  <source src="/videos/6n6Full5.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 5">
+				These videos are only available in MP4 format.
+			</video>
+		</div>
+	</div>	
+	
+	<div class="row">
+		<div class="col-md-12">
+
+			<video controls poster="/videos/6n6Full6.gif">
+			  <source src="/videos/6n6Full6.mp4" type="video/mp4" alt="6 in 6: Total Body v 6">
 				These videos are only available in MP4 format.
 			</video>
 		</div>
