--- a/views/videos.html
+++ b/views/videos.html
@@ -24,8 +24,8 @@
 		<div class="col-md-12">
 			<h5>Video Archive</h5>
 			<h5>6n6 - Ryhme Time Workouts</h5>
-			<video controls poster="/videos/6n6JabsNAbsgif">
-			  <source src="/videos/6n6-JabsNAbs.mp4" type="video/mp4" alt="6 in 6: Jabs and Abs">
+			<video controls poster="/videos/6n6JabsNAbs.gif">
+			  <source src="/videos/6n6JabsNAbs.mp4" type="video/mp4" alt="6 in 6: Jabs and Abs">
 				These videos are only available in MP4 format.
 			</video>
 			
@@ -35,7 +35,7 @@
 		<div class="col-md-12">
 
 			<video controls poster="/videos/6n6ButtNGut.gif">
-			  <source src="/videos/6n6-ButtNGut.mp4" type="video/mp4" alt="6 in 6: Butt and Gut">
+			  <source src="/videos/6n6ButtNGut.mp4" type="video/mp4" alt="6 in 6: Butt and Gut">
 				These videos are only available in MP4 format.
 			</video>
 		</div>
