--- a/views/videos.html
+++ b/views/videos.html
@@ -116,7 +116,7 @@
 		<div class="col-md-12">
 
 			<video controls poster="/videos/6n6Full4.gif">
-			  <source src="/videos/6n6Full14.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 4">
+			  <source src="/videos/6n6Ful14.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 4">
 				These videos are only available in MP4 format.
 			</video>
 		</div>
