--- a/views/main.html
+++ b/views/main.html
@@ -24,6 +24,10 @@
 
 	
 	<div class="jumbotron">
+		<h3> Getting started promotion!  Looking for at least 3 people to start a test group and provide critique.  $10 to join.</h3>
+		<h3> Will be given - A new Foam Roller / 10 - 12 sessions in November </h3>
+	</div>
+	<div class="jumbotron">	
 		<p>
 			Currently focussing on individual personal training sessions as well as small groups.
 		</p>
