update to add feature video

--- a/views/videos.html
+++ b/views/videos.html
@@ -9,11 +9,23 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-		  <h3>Videos</h3>
+		  <h5>Videos</h5>
 		</div>
 	</div>	
 	
-		<div class="row">
+	<div class="row">
+		<div class="col-md-12">
+			<h5>Feature Video</h5>
+			<iframe src="https://youtu.be/znQI-fLf11I?list=PLho5jPRC7e1xK6rARe4N3UyER09xt8RGV" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+<!-- 			<video controls poster="/videos/6n6Full3.gif">
+			  <source src="/videos/6n6Full3.mp4" type="video/mp4" alt="6 in 6: 6 in 6: Total Body v 3">
+				These videos are only available in MP4 format.
+			</video> -->
+		</div>
+	</div>	
+	
+	
+	<div class="row">
 		<div class="col-md-12">
 			<h5>New Videos</h5>
 			<p>New videos coming soon.</p>
