--- a/views/videos.html
+++ b/views/videos.html
@@ -16,7 +16,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h5>Feature Video</h5>
-			<iframe width="854" height="480" src="https://www.youtube.com/embed/znQI-fLf11I?list=PLho5jPRC7e1xK6rARe4N3UyER09xt8RGV" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/znQI-fLf11I?list=PLho5jPRC7e1xK6rARe4N3UyER09xt8RGV" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 	</div>	
 	
