video updates for grid

--- a/views/videos.html
+++ b/views/videos.html
@@ -14,32 +14,33 @@
 	</div>	
 	
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-6">
 			<h5>Feature Video</h5>
 			<iframe src="https://www.youtube.com/embed/znQI-fLf11I?list=PLho5jPRC7e1xK6rARe4N3UyER09xt8RGV" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
-	</div>	
+		
 	
+
+		<div class="col-md-6">
+		
+			<div>
+				<h5>New Videos</h5>
+				<p>New videos coming soon.</p>
+			</div>
+		
+			<div>
+				<h5>Video Archive</h5>
+				
+				
+				<p><a href="https://www.youtube.com/playlist?list=PLho5jPRC7e1xpcOiPPH0HDSg_WOd81uKD">6n6 - Rhyme Time Workouts</a></p>
+				
+				<p><a href="https://www.youtube.com/playlist?list=PLho5jPRC7e1xK6rARe4N3UyER09xt8RGV">6n6 - Total Body</a></p>
 	
-	<div class="row">
-		<div class="col-md-12">
-			<h5>New Videos</h5>
-			<p>New videos coming soon.</p>
+			</div>
+
+	
 		</div>
-	</div>
-	
-	<div class="row">
-		<div class="col-md-12">
-			<h5>Video Archive</h5>
-			<p><a href="https://www.youtube.com/playlist?list=PLho5jPRC7e1xpcOiPPH0HDSg_WOd81uKD">6n6 - Rhyme Time Workouts</a></p>
-		</div>
-	</div>
-	
-	<div class="row">
-		<div class="col-md-12">
-			<p><a href="https://www.youtube.com/playlist?list=PLho5jPRC7e1xK6rARe4N3UyER09xt8RGV">6n6 - Total Body</a></p>
-		</div>
-	</div>
 
 
+	</div>
 </div>
