--- a/views/videos.html
+++ b/views/videos.html
@@ -25,7 +25,7 @@
 		
 			<div>
 				<h5>New Videos</h5>
-				<p>New videos coming soon.</p>
+				<p><i>* New videos coming soon.</i></p>
 			</div>
 		
 			<div>
