--- a/views/contact.html
+++ b/views/contact.html
@@ -24,7 +24,7 @@
 			<p> via Call or Text 770-598-8666</p> 
 			<a href="mailto:joeyhedgesfitnessphoenix@gmail.com" class="btn btn-info btn-lg">
 			  <span class="glyphicon glyphicon-envelope"></span>Email me </a>
-			<p> via email @ joeyhedgesfitnessphoenix@gmail</p> 
+			<p> via email @ joeyhedgesfitnessphoenix@gmail.com</p> 
 		</div>
 	</div>	
 </div>
