--- a/views/main.html
+++ b/views/main.html
@@ -7,29 +7,17 @@
 		  <h4>Rising out from the fire to the new you</h4>
 		</div>
 	</div>
-		
-				<div class="row">
-		<div class="col-md-12">
-		<div id="slidy-container">
-  <figure id="slidy">
-    <img src="images/4.jpg" alt="Joey Stab Ball Pushup" >
-    <img src="images/cravings.jpg" alt="Cravings" >
-    <img src="images/StoppedWorkingOut-small.jpg" alt="What happens when stop working out" >
-    <img src="images/JH-NASMCert.jpg" alt="Certificate" >
-  </figure>
-</div>
-</div>
-	</div>	
 	
 
-	
 	<div class="jumbotron">
-		<h3> Getting started promotion!  Looking for at least 3 people to start a test group and provide critique.  $10 to join.</h3>
-		<h3> Will be given - A new Foam Roller / 10 - 12 sessions in November </h3>
+		<h3> Foam Rolling promotion! </h3>
+		<h3> New clients Will be given - A new Foam Roller / 10 - 12 sessions in March</h3>
 	</div>
 	<div class="jumbotron">	
 		<p>
-			Currently focussing on individual personal training sessions as well as small groups.
+			Currently focusing on individual personal training sessions as well as small groups.
+			
+			Located in Dacula, GA.  Workout in my personal gym or I can travel to you.  
 		</p>
 		<p>
 			<ul class="nobullet">
@@ -37,12 +25,29 @@
 				<li>Afternoon sessions available Monday, Wednesday, Thursday starting around 6:30PM.
 				<li>Weekend sessions available upon request and / or based on demand.
 			</ul>
-			<p>Availabiliy is subject to change over time.  If none of these time slots meet your needs, I am sure we can find a suitable time.
+			<p>Availability is subject to change over time.  If none of these time slots meet your needs, I am sure we can find a suitable time.
 			</p>	
 		</p>
 	</div>
+		
+	<div class="row">
+		<div class="col-md-12">
+			<div id="slidy-container">
+				<figure id="slidy">
+					<img src="images/4.jpg" alt="Joey Stab Ball Pushup" >
+					<img src="images/cravings.jpg" alt="Cravings" >
+					<img src="images/StoppedWorkingOut-small.jpg" alt="What happens when stop working out" >
+					<img src="images/JH-NASMCert.jpg" alt="Certificate" >
+				</figure>
+			</div>
+		</div>
+	</div>	
+	
+
+
 	
 </div>
+<div><span>02/21/2018</span></div>
 
 <script>
 /* user defined variables */
