--- a/views/paddle.html
+++ b/views/paddle.html
@@ -23,7 +23,7 @@
 				<tr>
 					<td>Group Class </br> Un-boot Camp</td>
 					<td>Exercise should be fun and not militant so we do not run boot camps.  3-4 sessions scheduled per week in group setting.</td>
-					<td>$50 / month *unlimited access **discounts for attendance and referrals</td>
+					<td>$50 / month</td>
 				</tr>
 				<tr>
 					<td>1o1 </br> One on One Specified Tailored Personal Training</td>
@@ -32,8 +32,8 @@
 				</tr>
 				<tr>
 					<td>Paddle Boarding Lessons and Excursions</td>
-					<td>Try a new fitness trend out in the water.  Available in Gwinnett, Fulton, Dekalb and Hall counties surrounding the Greater Atlanta area. Learn more at my <a href="#!/paddle.html">Paddle Boarding </a> page. </td>
-					<td>Lesson and Tour average 1 - 2 hours.   Cost per hour = Small Groups (2):  $80  Large Groups (3-5):  $100</td>
+					<td>Try a new fitness trend out in the water.  Available in Gwinnett, Fulton, Dekalb and Hall counties surrounding the Greater Atlanta area. </td>
+					<td>Lesson and Tour average 1 - 2 hours.   Cost per hour.  Small Groups (2):  $80  Large Groups (3-5):  $100</td>
 				</tr>				<tr>
 					<td>Design a Program</td>
 					<td>Need a fitness program but don't want or need the coaching and cueing nor want to be in a group environment?</td>
