--- a/views/paddle.html
+++ b/views/paddle.html
@@ -9,52 +9,13 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-		  <h3>Current service menu and charges</h3>
+		  <h3>Paddle Boarding Lessons and Excursions</h3>
 		</div>
 	</div>	
 	<div class="row">
 		<div  style="overflow-x:auto;" class="col-md-12">
-		  <table>
-				<tr>
-					<th>Session Type</th>
-					<th>Description</th>
-					<th>Price</th>
-				</tr>
-				<tr>
-					<td>Group Class </br> Un-boot Camp</td>
-					<td>Exercise should be fun and not militant so we do not run boot camps.  3-4 sessions scheduled per week in group setting.</td>
-					<td>$50 / month</td>
-				</tr>
-				<tr>
-					<td>1o1 </br> One on One Specified Tailored Personal Training</td>
-					<td>Program designed specifically for you.  2-3 sessions per week</td>
-					<td>Costs varies.   Please contact for details and availability.  Average ~ $30 / hour</td>
-				</tr>
-				<tr>
-					<td>Paddle Boarding Lessons and Excursions</td>
-					<td>Try a new fitness trend out in the water.  Available in Gwinnett, Fulton, Dekalb and Hall counties surrounding the Greater Atlanta area. </td>
-					<td>Lesson and Tour average 1 - 2 hours.   Cost per hour.  Small Groups (2):  $80  Large Groups (3-5):  $100</td>
-				</tr>				<tr>
-					<td>Design a Program</td>
-					<td>Need a fitness program but don't want or need the coaching and cueing nor want to be in a group environment?</td>
-					<td>Starting at $50.  Cost may vary based on request.  Cost includes assessments./td>
-				</tr>				
-				<tr>
-					<td>Group Discounts</td>
-					<td>The more you work the more you save</td>
-					<td>Discounts on next month's group rate based on session attendance</td>
-				</tr>
-				<tr>
-					<td>Global Discounts</td>
-					<td>Referral program</td>
-					<td>Discounts on next month's rate per referral</td>
-				</tr>		
-				<tr>
-					<td>Competitor rates better?</td>
-					<td>Show me a better rate from a local similar trainer</td>
-					<td>Reduction of costs site wide for all current members to meet or beat advertised pricing.</td>
-				</tr>					
-		  </table>
+			Paddling has been documented for centuries across the globe.  Modern paddle boarding, commonly referred to as Stand Up Paddling (SUP)  originated Hawaii as a way to parade the local kings around the island.</br>
+			Since, paddle boarding has become a popular way to exercise and leisurely 'hover' atop the water.  
 		</div>
 	</div>	
 	
