--- a/views/services.html
+++ b/views/services.html
@@ -23,12 +23,12 @@
 				<tr>
 					<td>Group Class </br> Un-boot Camp</td>
 					<td>Exercise should be fun and not militant so we do not run boot camps.  3-4 sessions scheduled per week in group setting.</td>
-					<td>$50 / month *unlimited access **discounts for attendance and referrals</td>
+					<td>$50 / month *unlimited access **discounts for attendance and referrals.  *Based on availability</td>
 				</tr>
 				<tr>
-					<td>1o1 </br> One on One Specified Tailored Personal Training</td>
+					<td>1 on 1 </br> One on One Specified Tailored Personal Training</td>
 					<td>Program designed specifically for you.  2-3 sessions per week</td>
-					<td>Costs varies.   Please contact for details and availability.  Average ~ $30 / hour</td>
+					<td>Please contact for details and availability.  Average cost ~ $30 / hour</td>
 				</tr>
 				<tr>
 					<td>Paddle Boarding Lessons and Excursions</td>
@@ -37,22 +37,17 @@
 				</tr>				<tr>
 					<td>Design a Program</td>
 					<td>Need a fitness program but don't want or need the coaching and cueing nor want to be in a group environment?</td>
-					<td>Starting at $50.  Cost may vary based on request.  Cost includes assessments./td>
+					<td>Starting at $75.  Cost may vary based on request.  Cost includes assessments.</td>
 				</tr>				
 				<tr>
-					<td>Group Discounts</td>
-					<td>The more you work the more you save</td>
-					<td>Discounts on next month's group rate based on session attendance</td>
+					<td>Nutrition Guidance and Consultation</td>
+					<td>Diet fad trends are not the answer.  Learn how to eat the foods you like and maintain a healthy lifestyle.  Food and nutrition can equate to more than 75% of your overall health. With a specialization in Fitness Nutrition, I can help evaluate your current food consumption and a suitable and sustainable plan to achieve your health and fitness goals</td>
+					<td>$75 per session</td>
 				</tr>
 				<tr>
 					<td>Global Discounts</td>
 					<td>Referral program</td>
-					<td>Discounts on next month's rate per referral</td>
-				</tr>		
-				<tr>
-					<td>Competitor rates better?</td>
-					<td>Show me a better rate from a local similar trainer</td>
-					<td>Reduction of costs site wide for all current members to meet or beat advertised pricing.</td>
+					<td>Refer your family and friends for service discounts and / or monthly promotional gifts</td>
 				</tr>					
 		  </table>
 		</div>
