--- a/views/paddle.html
+++ b/views/paddle.html
@@ -18,5 +18,20 @@
 			Since, paddle boarding has become a popular way to exercise and leisurely 'hover' atop the water.  
 		</div>
 	</div>	
-	
+	<div class="row">
+			<div  style="overflow-x:auto;" class="col-md-6">
+				
+			</div>
+			<div  style="overflow-x:auto;" class="col-md-6">
+				
+			</div>			
+	</div>	
+	<div class="row">
+			<div  style="overflow-x:auto;" class="col-md-6">
+				
+			</div>
+			<div  style="overflow-x:auto;" class="col-md-6">
+				
+			</div>			
+	</div>		
 </div>
