--- a/views/main.html
+++ b/views/main.html
@@ -10,14 +10,21 @@
 	
 
 	<div class="jumbotron">
-		<h3> Foam Rolling promotion! </h3>
-		<h3> New clients Will be given - A new Foam Roller / 10 - 12 sessions in March</h3>
+		<h3> Spring Foam Rolling promotion! </h3>
+		<h3> New clients Will be given - A new Foam Roller</h3>
 	</div>
 	<div class="jumbotron">	
+	
+		<p>
+			New for Spring through Summer 2018 season... and maybe early fall (weather permitting), Fitness Phoenix is offering <a href="#!/paddle.html">Paddle Boarding</a> lessons and local excursions.  
+		</p>
+		<p>
+			Also new to Fitness Phoenix, I have been certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide guidance to your nutrition goals as well as your fitness.  
+		</p>
 		<p>
 			Currently focusing on individual personal training sessions as well as small groups.
-			
-			Located in Dacula, GA.  Workout in my personal gym or I can travel to you.  
+			</br></br>
+			Located in Dacula, GA.  Workout in my personal gym or I can travel to you. View my <a href="#!/services.html">services</a> to find out more. 
 		</p>
 		<p>
 			<ul class="nobullet">
@@ -28,6 +35,7 @@
 			<p>Availability is subject to change over time.  If none of these time slots meet your needs, I am sure we can find a suitable time.
 			</p>	
 		</p>
+
 	</div>
 		
 	<div class="row">
