--- a/views/services.html
+++ b/views/services.html
@@ -41,7 +41,7 @@
 				</tr>				
 				<tr>
 					<td>Nutrition Guidance and Consultation</td>
-					<td>Diet fad trends are not the answer.  Learn how to eat the foods you like and maintain a healthy lifestyle.  Food and nutrition can equate to more than 75% of your overall health. With a specialization in Fitness Nutrition, I can help evaluate your current food consumption and a suitable and sustainable plan to achieve your health and fitness goals</td>
+					<td>Diet fad trends are not the answer.  Learn how to eat the foods you like and maintain a healthy lifestyle.  Food and nutrition can equate to more than 75% of your overall health. With a specialization in Fitness <a href="#!/nutrition.html">Nutrition</a>, I can help evaluate your current food consumption and a suitable and sustainable plan to achieve your health and fitness goals</td>
 					<td>$75 per session</td>
 				</tr>
 				<tr>
