--- a/views/main.html
+++ b/views/main.html
@@ -11,7 +11,7 @@
 
 	<div class="jumbotron">
 		<h3> Spring Foam Rolling promotion! </h3>
-		<h3> New clients Will be given - A new Foam Roller</h3>
+		<h3> New clients will be given - A new Foam Roller</h3>
 	</div>
 	<div class="jumbotron">	
 	
