--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@
 
 .brand {
   position: absolute;
-  padding-left: 20px;
+  padding-left: 42px;
   float: left;
   line-height: 70px;
   text-transform: uppercase;
@@ -271,7 +271,6 @@ table {
     width: 100%;
 }
 
-
 th, td {
     padding: 15px;
     text-align: left;
@@ -280,4 +279,9 @@ th, td {
 th {
     text-align: center;
 	    height: 50px;
+}
+
+@font-face {
+  font-family: 'Magic';
+  src: url('/styles/magic.ttf')  format('truetype');
 }
