--- a/styles/main.css
+++ b/styles/main.css
@@ -3,24 +3,23 @@
   height: 70px;
   background: #262626;
 }
+@font-face {
+  font-family: 'Magic';
+  src: url('/styles/magic.ttf')  format('truetype');
+}
 
 .brand {
   position: absolute;
   padding-left: 42px;
   float: left;
   line-height: 70px;
-  text-transform: uppercase;
-  font-size: 1.4em;
+  font-size: 2.4em;
+  font-family: magic;
 }
 .brand a,
 .brand a:visited {
   color: #ffffff;
   text-decoration: none;
-}
-
-.nav-container {
-  max-width: 1000px;
-  margin: 0 auto;
 }
 
 nav {
@@ -279,9 +278,4 @@ th, td {
 th {
     text-align: center;
 	    height: 50px;
-}
-
-@font-face {
-  font-family: 'Magic';
-  src: url('/styles/magic.ttf')  format('truetype');
 }
