--- a/views/main.html
+++ b/views/main.html
@@ -1,10 +1,7 @@
 <div data-ng-init="setup()">
 	<div class="row">
-		<div class="col-md-6">
-		  <h2>Fitness Phoenix</h2>
-		</div>
-		<div class="col-md-6">
-		  <h4>Rising out from the fire to the new you</h4>
+		<div class="col-md-12" style="font-family:magic">
+		  <h3>Rising out from the fire to the new you</h4>
 		</div>
 	</div>
 	
