--- a/views/nutrition.html
+++ b/views/nutrition.html
@@ -1,12 +1,5 @@
 <div data-ng-init="setup()">
-	<div class="row">
-		<div class="col-md-6">
-		  <h2>Fitness Phoenix</h2>
-		</div>
-		<div class="col-md-6">
-		  <h4>Rising out from the fire to the new you</h4>
-		</div>
-	</div>
+
 	<div class="row">
 		<div class="col-md-12">
 		  <h3>Nutritional Guidance</h3>
@@ -14,7 +7,7 @@
 	</div>	
 	<div class="row">
 		<div class="col-md-12">
-			<p>Nutrition details go here
+			<p>Nutrition details go here UNDER CONSTRUCTION
 			</p>
 		</div>
 	</div>	
