--- a/views/main.html
+++ b/views/main.html
@@ -1,6 +1,6 @@
 <div data-ng-init="setup()">
 	<div class="row">
-		<div class="col-md-12" style="font-family:magic">
+		<div class="col-md-12" style="font-family:magic", "text-align:center">
 		  <h3>Rising out from the fire to the new you</h4>
 		</div>
 	</div>
