--- a/views/paddle.html
+++ b/views/paddle.html
@@ -6,24 +6,50 @@
 		</div>
 	</div>	
 	<div class="row">
-		<div  style="overflow-x:auto;" class="col-md-12">
-			Paddling has been documented for centuries across the globe.  Modern paddle boarding, commonly referred to as Stand Up Paddling (SUP)  originated Hawaii as a way to parade the local kings around the island.</br>
-			Since, paddle boarding has become a popular way to exercise and leisurely 'hover' atop the water.  
+		<div  style="overflow-x:auto;" class="col-md-8">
+			<p>Paddling has been documented for centuries across the globe.  Modern paddle boarding, commonly referred to as Stand Up Paddling (SUP)  originated Hawaii as a way to parade the local kings around the island.</br>
+			Since, paddle boarding has become a popular way to exercise and leisurely 'hover' atop the water giving a new perspective to exploring the waterways </br>
+			Paddling is extremely fun and is a great way to exercise, burning 300 - 1000 calories per hour</p>
+		</div>
+		<div  style="overflow-x:auto;" class="col-md-4">
+			<img src="images/SUPcalorieBurn.jpg" alt="Paddle boarding calories burned" >				
 		</div>
 	</div>	
 	<div class="row">
 			<div  style="overflow-x:auto;" class="col-md-6">
-				
+				<p>Fitness Phoenix is equipped to support groups of up to 5 paddlers.  </br>
+				Tours last from 1 to 2 hours located in the local metro Atlanta area waterways, frequenting Fort Yargo State Park. </br>
+				Local lakes include but are not limited to:
+					<ul>
+						<li>Fort Yargo *parking fees may apply</li>
+						<li>Tribble Mill</li>
+						<li>Lake Lanier *parking fees may apply</li>
+						<li>Keith Bridge Park</li>
+						<li>Lake Alatoona</li>	
+						<li>Morgan Falls Overlook Park</li>
+						<li>Stone Mountain *parking fees may apply</li>
+					</ul>
+				Equipment will be provided to include the board, life jacket, board leash, and of course a paddle.   </br>
+				NOTE:  Some boards are equipped to convert into a kayak with an optional seat and extended paddle head if interested. </br>
+				* Restrictions apply.   </br>**Boarders are limited to a weight limit of 200lbs.  
+				</p>
 			</div>
 			<div  style="overflow-x:auto;" class="col-md-6">
-				
+				<img src="images/SUP.jpg" alt="Paddle boarding adults" >
 			</div>			
 	</div>	
 	<div class="row">
 			<div  style="overflow-x:auto;" class="col-md-6">
-				
+				<img src="images/SUPkids.jpg" alt="Paddle boarding children" >				
 			</div>
 			<div  style="overflow-x:auto;" class="col-md-6">
+				<p>Paddle boarding is a family adventure and I welcome your children to come along on the adventure. </br>
+				In order to paddle, accompanying children
+					<ul>
+						<li>should be able to swim without a flotation device</li>
+						<li>are preferred to be at least 12 years of age.  Exceptions may be permitted based on skill. </li>
+					</ul>
+				</p>
 				
 			</div>			
 	</div>		
