--- a/views/main.html
+++ b/views/main.html
@@ -16,7 +16,7 @@
 			New for Spring through Summer 2018 season... and maybe early fall (weather permitting), Fitness Phoenix is offering <a href="#!/paddle.html">Paddle Boarding</a> lessons and local excursions.  
 		</p>
 		<p>
-			Also new to Fitness Phoenix, I have been certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide guidance to your nutrition goals as well as your fitness.  
+			Also new to Fitness Phoenix, I have been certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide guidance to your <a href="#!/nutrition.html">nutrition</a> goals as well as fitness.  
 		</p>
 		<p>
 			Currently focusing on individual personal training sessions as well as small groups.
