--- a/styles/main.css
+++ b/styles/main.css
@@ -181,8 +181,10 @@ section {
 	
   height: 450px;
 }
-
-
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
 
 .browsehappy {
   margin: 0.2em 0;
