--- a/views/paddle.html
+++ b/views/paddle.html
@@ -8,7 +8,7 @@
 	<div class="row">
 		<div  style="overflow-x:auto;" class="col-md-8">
 			<p>Paddling has been documented for centuries across the globe.  Modern paddle boarding, commonly referred to as Stand Up Paddling (SUP)  originated in Hawaii as a way to parade the local kings around the island.</br>
-			Since, paddle boarding has become a popular way to exercise and leisurely 'hover' atop the water giving a new perspective to exploring the waterways </br>
+			Paddle boarding has become a popular way to exercise and leisurely 'hover' atop the water giving a new perspective to exploring the waterways </br>
 			Paddling is extremely fun and is a great way to exercise, burning 300 - 1000 calories per hour</p>
 		</div>
 		<div  style="overflow-x:auto;" class="col-md-4">
