--- a/views/about.html
+++ b/views/about.html
@@ -6,31 +6,34 @@
 		</div>
 	</div>	
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-9">
 			<p>
 			I blame my daughter Abby-Rose the most for my health journey...and I thank her for it all the time. <Insert Smiley>
 
 			Abby was born with some severe food allergies that we learned through many of trials during breastfeeding and most of her worst reactions came after my wife had eggs for breakfast.   
 			At the time it was not conventional to test babies for food allergies but we persisted and found that this beautiful helpless baby was allergic to most of what we were eating and being passed through my wife, Amy's milk.  
 
-			This event and the hope to reduce some baby weight had Amy starting to exercise regularly and resarch alternatives to our normal diet.  
+			This event and the hope to reduce some baby weight had Amy starting to exercise regularly and research alternatives to our normal diet.  
 
-			Around this time, Amy's brother had enlisted in the Marines and provided some friendly competition between us and a new joy for excercising.  
+			Around this time, Amy's brother had enlisted in the Marines and provided some friendly competition between us and a new joy for exercising.  
 			I had recently found the childhood enjoyment out of riding bikes a bit again since being a teenager so with all of this together my bike rides turned into random pull-ups in the hallway to 
 			daily workout videos. 
 
-			I personally have seen an enjoyment in exercise and believe that it can be the fountain of youth and reduce stress.  Exercise has also been said to be a piece of the puzzle to prevent and in some cases help cures chronic diseases and anxiety.  Thisn ncreases with proper nutrition.  
+			I personally have seen an enjoyment in exercise and believe that it can be the fountain of youth and reduce stress.  Exercise has also been said to be a piece of the puzzle to prevent and in some cases help cures chronic diseases and anxiety.  This increases with proper nutrition.  
 
-			I have stayed consistently active through some type of movement be it mountain biking, resistance training, hiking, yoga, or my newfound favorite paddleboarding since 2009 when this journey began. 
+			I have stayed consistently active through some type of movement be it mountain biking, resistance training, hiking, yoga, or my newfound favorite paddle boarding since 2009 when this journey began. 
 
 			My main success story in my fitness journey is in successfully GAINING 20 pounds, and still holding a happy body fat percentage hovering around 15%.  This is not the traditional success story I know, but for me being a short guy who could never break 130 pounds regardless of what I did from a nutrition or exercise perspective, it is quite the accomplishment for me, especially while keeping the excessive unwanated fat at bay.  
 
 			The name Fitness Phoenix has a few meanings and symbolism.  
-			- the Phoenix is a mythical bird signifying second life and I am a big fan of second chances. 
+			- the Phoenix is a mythical bird signifying second life and I am a big fan of second chances. For many, finding fitness is their second chance to healthier living.
 			- My wife and I  really enjoy the South West, specifically Arizona and the Phoenix area.  
 
 			Abby is the artist behind the logo.  </p>
 		</div>
+		<div class="col-md-3">
+			<img src="images/fitness_phoenix_logo_orig.jpg" alt="Fitness Phoenix Logo">
+		</div>	
 	</div>	
 </div>
 
