--- a/views/nutrition.html
+++ b/views/nutrition.html
@@ -2,24 +2,23 @@
 
 	<div class="row">
 		<div class="col-md-12">
-		  <h3>Nutritional Guidance</h3>
+		  <h3>Nutritional Counseling and Guidance</h3>
 		</div>
 	</div>	
 	<div class="row">
 		<div class="col-md-12">
-			<p>Nutrition details go here UNDER CONSTRUCTION
-			</p>
+			<p>You are what you eat!  Abs are made in the kitchen! An apple a day keeps the doctor away!  </br>
+			There are many popular quotes and sayings about nutrition and food out in the world today.  Many, like the ones above, have some truths to them.  </br>
+			...but there are also some bad sayings out there along with bad information on what a diet is and should be.  I am here to help you better understand the right from the wrong and educate on what a diet and proper nutrition is about, and yes ladies (and gentlemen) it can include chocolate and other desirables, in moderation.  </p>
+			<p>To me a diet is the food you eat.  It is not something you go on as that has the assumption of going off of at some point in time.  In order for something to work, your diet needs to be long term.  </p>
+			<p>Before starting a fad diet, like Atkins, Paleo, or Keto, all of which are very restricting and likely to not last long; lets <a href="#!/contact.html">talk</a>. I can help you continue to eat good food with out restriction or "magic" pills and meet your health goals.  </p>
+			<p>See my <a href="#!/services.html">Services</a> page for more information.</p>
+
 		</div>
 	</div>	
 </div>
 
 
-
-
-
-
-
- 
 
 
 
