--- a/views/main.html
+++ b/views/main.html
@@ -1,24 +1,24 @@
 <div data-ng-init="setup()">
 	<div class="row">
 		<div class="col-md-12" style="font-family:magic;text-align:center;">
-		  <h3>Rising out from the fire to the new you</h4>
+		  <h1>Fitness Phoenix,LLC Dacula, Gwinnett - Rising out from the fire to the new you!</h1>
 		</div>
 	</div>
 	
 
 	<div class="jumbotron">
 		<h3> Spring Foam Rolling promotion! </h3>
-		<h3> New clients will be given - A new Foam Roller</h3>
+		<h3> New clients will be given a new FOAM ROLLER</h3>
 	</div>
 	<div class="jumbotron">	
 	
-		<p>
+		<p id="paddleboarding">
 			New for Spring through Summer 2018 season... and maybe early fall (weather permitting), Fitness Phoenix is offering <a href="#!/paddle.html">Paddle Boarding</a> lessons and local excursions.  
 		</p>
-		<p>
+		<p id="nutrition">
 			Also new to Fitness Phoenix, I have been certified through NASM - National Academy of Sports Medicine as a Fitness Nutrition Specialist offering the ability to provide guidance to your <a href="#!/nutrition.html">nutrition</a> goals as well as fitness.  
 		</p>
-		<p>
+		<p id="training">
 			Currently focusing on individual personal training sessions as well as small groups.
 			</br></br>
 			Located in Dacula, GA.  Workout in my personal gym or I can travel to you. View my <a href="#!/services.html">services</a> to find out more. 
@@ -39,10 +39,10 @@
 		<div class="col-md-12">
 			<div id="slidy-container">
 				<figure id="slidy">
-					<img src="images/4.jpg" alt="Joey Stab Ball Pushup" >
-					<img src="images/cravings.jpg" alt="Cravings" >
-					<img src="images/StoppedWorkingOut-small.jpg" alt="What happens when stop working out" >
-					<img src="images/JH-NASMCert.jpg" alt="Certificate" >
+					<img src="images/JH-NASMCert.jpg" alt="Certificate" title="Personal Training Certification - Servicing Dacula, Gwinnett, and Atlanta area">
+					<img src="images/4.jpg" alt="Joey Stab Ball Pushup" title="Training in action" >
+					<img src="images/cravings.jpg" alt="Cravings" title="Nutrition and cravings">
+					<img src="images/StoppedWorkingOut-small.jpg" alt="What happens when stop working out" title="Side effects to reducing work outs" >
 				</figure>
 			</div>
 		</div>
@@ -52,7 +52,7 @@
 
 	
 </div>
-<div><span>02/21/2018</span></div>
+<div><span>05/01/2018</span></div>
 
 <script>
 /* user defined variables */
