--- a/views/main.html
+++ b/views/main.html
@@ -1,7 +1,8 @@
 <div data-ng-init="setup()">
 	<div class="row">
 		<div class="col-md-12" style="font-family:magic;text-align:center;">
-		  <h1>Fitness Phoenix,LLC Dacula, Gwinnett - Rising out from the fire to the new you!</h1>
+		  <h1>Fitness Phoenix in Dacula, Gwinnett</h1>
+		  <h2>Rising out from the fire to the new you!</h2>
 		</div>
 	</div>
 	
