--- a/views/services.html
+++ b/views/services.html
@@ -14,24 +14,26 @@
 					<th>Price</th>
 				</tr>
 				<tr>
+					<td>1 on 1 </br> One on One Specified Tailored Personal Training</td>
+					<td>Program designed specifically for you suited to your needs with two commitment options of 12 or 16 weeks.</td>
+					<td>Please contact for details and availability.  Prices start at $480 for the 12 week program</td>
+				</tr>
+				<tr>
 					<td>Group Class </br> Un-boot Camp</td>
 					<td>Exercise should be fun and not militant so we do not run boot camps.  3-4 sessions scheduled per week in group setting.</td>
 					<td>$60 / month *unlimited access **discounts for attendance and referrals.  *Based on availability</td>
 				</tr>
-				<tr>
-					<td>1 on 1 </br> One on One Specified Tailored Personal Training</td>
-					<td>Program designed specifically for you.  2-3 sessions per week</td>
-					<td>Please contact for details and availability.  Average cost ~ $30 / hour</td>
-				</tr>
+								</tr>				<tr>
+					<td>Design a Program</td>
+					<td>Need a fitness program but don't want or need the coaching and cueing nor want to be in a group environment?</td>
+					<td>Starting at $150.  Cost may vary based on request.  Cost includes monthly assessments.</td>
+				</tr>	
+				
 				<tr>
 					<td>Paddle Boarding Lessons and Excursions</td>
 					<td>Try a new fitness trend out in the water.  Available in Gwinnett, Fulton, Dekalb and Hall counties surrounding the Greater Atlanta area. Learn more at my <a href="#!/paddle.html">Paddle Boarding </a> page. </td>
 					<td>Lesson and Tour average 1 - 2 hours.   Cost per hour = Small Groups (2):  $80  Large Groups (3-5):  $120</td>
-				</tr>				<tr>
-					<td>Design a Program</td>
-					<td>Need a fitness program but don't want or need the coaching and cueing nor want to be in a group environment?</td>
-					<td>Starting at $75.  Cost may vary based on request.  Cost includes assessments.</td>
-				</tr>				
+			
 				<tr>
 					<td>Nutrition Guidance and Consultation</td>
 					<td>Diet fad trends are not the answer.  Learn how to eat the foods you like and maintain a healthy lifestyle.  Food and nutrition can equate to more than 75% of your overall health. With a specialization in Fitness <a href="#!/nutrition.html">Nutrition</a>, I can help evaluate your current food consumption and a suitable and sustainable plan to achieve your health and fitness goals</td>
@@ -40,7 +42,7 @@
 				<tr>
 					<td>Global Discounts</td>
 					<td>Referral program</td>
-					<td>Refer your family and friends for service discounts and / or monthly promotional gifts</td>
+					<td>Refer your family and friends for service discounts and / or monthly promotional gifts.</td>
 				</tr>					
 		  </table>
 		</div>
