--- a/styles/main.css
+++ b/styles/main.css
@@ -6,20 +6,21 @@
 
 .brand {
   position: absolute;
-  padding-left: 42px;
+  padding-left: 20px;
   float: left;
   line-height: 70px;
-  font-size: 2.4em;
-  font-family: Magic;
+  text-transform: uppercase;
+  font-size: 1.4em;
 }
 .brand a,
 .brand a:visited {
   color: #ffffff;
   text-decoration: none;
 }
-@font-face {
-  font-family: 'Magic';
-  src: url('/styles/magic.ttf')  format('truetype');
+
+.nav-container {
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 nav {
@@ -178,13 +179,11 @@ h2, h4 {
 }
 
 section {
-	
+  width: 900px; 
   height: 450px;
 }
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
+
+
 
 .browsehappy {
   margin: 0.2em 0;
@@ -236,7 +235,7 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 1920px;
+    max-width: 730px;
   }
 
   /* Remove the padding we set earlier */
@@ -271,6 +270,7 @@ tr:hover {background-color: #f5f5f5}
 table {
     width: 100%;
 }
+
 
 th, td {
     padding: 15px;
